# 4K_MBTI

./: .env.example  .env.local.example  .env.production.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.githooks/: pre-commit
Api/: agent.py  app_version.py  assessment_service.py  audit_case_template_alignment.py  auth_service.py  config.py  database.py  deepseek_client.py  email_service.py  mbti_refinement_service.py  org_access.py  progress_service.py  regression_tests.py  routes.py  schemas.py  system_logging.py  typst_pdf_renderer.py
Api/mbti/: __init__.py  faiss_store.py  prompts.py  service.py
Api/pdf_templates/: admin_dialogue.typ  admin_reports.typ  competency_report.typ
docs/: user-admin-guide.md
scripts/: bump_patch_version.py  bump_version.py  import_case_templates_from_excel.py  migrate_prompts_to_db.py  reset_password.py  setup_git_hooks.sh  update_deployed_db.py
web/: index.html
web/js/: api.js  config.js  dom.js  logout-ui.js  main.js  router.js  screen-loaders.js  session.js  state.js  wiring.js
web/js/entries/: admin-dashboard.js  admin-organizations.js  admin-regression-tests.js  interview.js
web/js/screens/: ai-welcome.js  assessment.js  chat.js  dashboard.js  interview.js  profile-recovery.js  report.js
web/js/screens/admin/: reports.js  (+3 more)
web/js/utils/: format.js  loader.js
web/styles/: base.css  tokens.css
web/styles/screens/: admin-organizations.css  admin-reports.css  admin.css  ai-welcome.css  auth.css  chat.css  dashboard.css  interview.css  prechat.css  report.css
