[project]
name = "agent-4k"
version = "2.1.19"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0,<2.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "uvicorn>=0.30.0",
    "typst>=0.14.8",
]
